# simpleInterpolation

./: .gitignore  CMakeLists.txt  README.md  simpleInterpolation.h  simpleInterpolationTest.cpp
doc/: TestChart.numbers
